fixed bug where font color of certain class defaulted to bright blue on mobile

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ button {
 
 .silver {
     background-color:#669999;
+    color: black;
 }
 
 .charcoal {
